--- a/3.27/ELM-STYLUS/style.styl
+++ b/3.27/ELM-STYLUS/style.styl
@@ -41,7 +41,6 @@ bg-image($url)
           vertical-align top
           width 30px
           height 18px
-          bg-image('brand')
+          bg-image('brand')5
           background-size 30px 18px
           background-repeat: no-repeat
-            
